# image_matching

./: README.md
copa_msgs/: CMakeLists.txt  package.xml
copa_msgs/action/: WindSpeed.action
copa_msgs/msg/: ImageImu.msg
csv_data_pkg/: CMakeLists.txt  package.xml  setup.py
csv_data_pkg/map/: get_map.py
csv_data_pkg/map/logs/: log_1.csv  log_2.csv  plata_log.csv
csv_data_pkg/src/: convert_gps_datas_to_m.py  filter_gps.py  get_map.py  publish_csv.py
csv_data_pkg/src/csv_data_pkg/: publish_csv.py
image_processing/: CMakeLists.txt  package.xml  setup.py
image_processing/bags/: 500m.bag  500m_2022-03-13-11-15-47.bag  50600m.bag  600m.bag  winter1.bag  winter2.bag  winter_1.bag  winter_2.bag
image_processing/camera_params/: params.yml
image_processing/config/: config.yaml
image_processing/launch/: find_pose.launch  mezhcadr.launch
image_processing/scripts/: calibrate_camera.py  generate_aruco.py  geodetic_conv.py  image_logger.py  image_processing.py  logger.py  logger_plata.py  match_finder.py  param_publisher.py  photo_publisher.py  position_finder.py  pub_data.py  test.py  test_client.py  utils.py  write_video_cmd.py
image_processing/src/image_processing/: anti_spoof.py  autostart_node.py  bag_recorder.py  command_logger.py  csi_camera.py  geodetic_conv.py  gps_noiser.py  image_logger.py  image_processing.py  kaze_test.py  logger.py  logger_mezhcadr.py  logger_plata.py  match_finder.py  mezhcadr.py  param_publisher.py  photo_publisher.py  plata_logger_for_analize.py  position_finder.py  simple_kalman.py  test_client.py  utils.py
position_finder/: CMakeLists.txt  package.xml
position_finder/launch/: photo_publisher.launch
position_finder/src/: photo_publisher.cpp
